# engine-dev-school-2-texture

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
